 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Apache HCatalog Change Log

Trunk (unreleased changes)

  INCOMPATIBLE CHANGES

  NEW FEATURES
  HCAT-370 Create a HiveMetaStoreClient cache in hcatalog (amalakar via toffer) 

  HCAT-419 Java APIs for HCatalog DDL commands (avandana via toffer)

  HCAT-182 Web services interface for HCatalog access and Pig, Hive, and MR job execution (ctdean, Rachel Gollub, and thejas via gates)

  HCAT-328 HCatLoader should report its input size so pig can estimate the number of reducers (traviscrawford via gates)

  HCAT-427 Document storage-based authorization (lefty via gates)

  IMPROVEMENTS
  HCAT-460 Enable boolean to integer conversions (traviscrawford)

  HCAT-450 HCatalog should use transitive ivy dependencies (traviscrawford)

  HCAT-350 Writing BINARY data to HCatRecord depends on a Hive class (thejas via traviscrawford)

  HCAT-440 pig field names for arrays should be configurable (traviscrawford)

  HCAT-434 Package HCatalog pig support as a separate jar (traviscrawford)

  HCAT-341 InitializeInput improvements (traviscrawford)

  HCAT-439 Unit test failures in trunk build - Jenkins build 1516 (avandana)

  HCAT-426 HCatalog should log with slf4j everywhere (traviscrawford via khorgath)

  HCAT-389 hcat_ping (script to check if HCatalog server is running/reachable) (mithun via khorgath)

  HCAT-432 Add findbugs to build (rohini via avandana)

  HCAT-424 Code cleanup of tabs (khorgath)

  HCAT-331 Update HCatalog to junit 4 (traviscrawford via khorgath)

  HCAT-414 More HCat e2e tests (khorgath via gates)

  HCAT-374 Add HCatBaseTest and one example usage (traviscrawford via gates)

  HCAT-390 Add e2e test for Hive with different file formats in different partitions (daijy via gates)
